--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Arthur Chiu",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.3",
     "cat-me": "^1.0.3",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
